--- a/build.gradle
+++ b/build.gradle
@@ -1,17 +1,15 @@
 plugins {
   //id 'net.minecrell.licenser' version '0.3'
-  id 'org.ajoberstar.grgit' version '2.3.0'
-  id 'com.github.johnrengelman.shadow' version '2.0.4'
+  id 'org.ajoberstar.grgit' version '5.2.0'
+  id 'com.github.johnrengelman.shadow' version '7.1.2'
 }
 
 apply plugin: 'java'
 apply plugin: 'eclipse'
-apply plugin: 'maven'
 apply plugin: 'maven-publish'
 
 group = 'de.oceanlabs.mcp'
 version = gitVersion()
-targetCompatibility = sourceCompatibility = compileJava.targetCompatibility = compileJava.sourceCompatibility = '1.8'
 
 ext {
     CHANGELOG = file("build/${project.name}-${project.version}-changelog.txt")
@@ -22,7 +20,7 @@ repositories {
 }
 
 def gitVersion() {
-    def desc = grgit.describe(longDescr: true).split('-') as List
+    def desc = grgit.describe(longDescr: true, tags: true).split('-') as List
     def hash = desc.remove(desc.size() - 1)
     def offset = desc.remove(desc.size() - 1)
     def tag = desc.join('-')
@@ -31,6 +29,7 @@ def gitVersion() {
 }
 
 jar {
+    classifier 'thin'
     manifest.attributes('Main-Class': 'de.oceanlabs.mcp.mcinjector.MCInjector')
     manifest.attributes('Implementation-Version': project.version)
 }
@@ -59,18 +58,17 @@ if (changelog.exists()) {
 }
 
 dependencies {
-    compile 'org.ow2.asm:asm:6.1-beta2'
-    compile 'org.ow2.asm:asm-tree:6.1-beta2'
-    compile 'net.sf.jopt-simple:jopt-simple:4.9'
-    compile 'com.google.code.gson:gson:2.2.4'
+    implementation 'org.ow2.asm:asm:9.4'
+    implementation 'org.ow2.asm:asm-tree:9.4'
+    implementation 'net.sf.jopt-simple:jopt-simple:5.0.4'
+    implementation 'com.google.code.gson:gson:2.10.1'
 }
 
 publishing {
     publications {
         mavenJava(MavenPublication) {
             from components.java
-            artifact shadowJar
-            artifact tasks.sourceJar
+            artifact sourceJar
             if (CHANGELOG.exists())
                 artifact source: CHANGELOG, classifier: 'changelog'
             pom {
@@ -123,7 +121,7 @@ publishing {
                     username = project.properties.mavenUser
                     password = project.properties.mavenPassword 
                 }
-                url 'http://files.minecraftforge.net/maven/manage/upload'
+                url 'https://maven.outlands.top/releases'
             } else {
                 url 'file://' + project.file('repo').getAbsolutePath()
             }
